--- a/Geant4/B2b/CMakeLists.txt
+++ b/Geant4/B2b/CMakeLists.txt
@@ -48,6 +48,8 @@ set(EXAMPLEB2B_SCRIPTS
   run_scorer.mac
   neutrons.mac
   vis.mac
+  test_neutron.mac
+  run.sh
   )
 
 foreach(_script ${EXAMPLEB2B_SCRIPTS})
